Fix spacing for tags and profile

--- a/frontend/src/css/components/profile.scss
+++ b/frontend/src/css/components/profile.scss
@@ -198,8 +198,7 @@
             width: 707px;
             padding-left: 50px;
             box-sizing: border-box;
-            padding-top: 20px;
-            
+            padding-top: 0px;
             
             .fa-cloud {
                 font-size: 105px;
