--- a/frontend/src/css/components/tag.scss
+++ b/frontend/src/css/components/tag.scss
@@ -49,9 +49,5 @@
 @media (min-width: 700px) {
     .tag-page-outer-container {
         padding-right: 55px;
-
-        .tag-page-tag-container {
-            margin-top: -20px;
-        }
     }
 }
